Resolves: tdf#146068 don't crash when MA(central) lacks data

Change-Id: I2c9b78f4d1a963bb71abb21068e61e6983ade777
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150500
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>